QNativeSocketEngine: Fix some error handling related to waitFor*()

Task: QTBUG-7054
Reviewed-by: Peter Hartmann
(cherry picked from commit 8aaa61f8ea11c6e5794b5a3f6bf14bbbcb712074)